# NIKA

./: .gitignore  CLAUDE.md  CMakeLists.txt  STATUS.md
.claude/: settings.local.json
Source/: ADSR.cpp  ADSR.h  Compressor.cpp  Compressor.h  FXEngine.cpp  FXEngine.h  KeyswitchEngine.cpp  KeyswitchEngine.h  LadderFilter.cpp  LadderFilter.h  Limiter.cpp  Limiter.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Saturator.cpp  Saturator.h  Standalone.mm  StandaloneNative_Mac.mm
